--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -746,8 +746,7 @@ a.about-link.selected:after {
 }
 
 #page_auth.page_links {;
-    display: block;
-    position: relative;
+    width: 100%;
     margin: 6px 8px 0 0;
     z-index: 101;
 }
