--- a/javascript/shared-package/goalbook-row.handlebars
+++ b/javascript/shared-package/goalbook-row.handlebars
@@ -12,7 +12,7 @@ maintain consistency. }}
             {{/if}}
         </span>
         <span class="goal-controls">
-            <a class="simple-button archive" href="javascript:void(0)">Archive Completed Goal</a>
+            <a class="simple-button archive" href="javascript:void(0)">Sla de voltooide doelstelling op</a>
         </span>
     </p>
     <ul class="inline-list objective-list">
