--- a/javascript/shared-package/goalbook-row.handlebars
+++ b/javascript/shared-package/goalbook-row.handlebars
@@ -5,7 +5,7 @@ maintain consistency. }}
     <p class="goal-description">
         <span class="goal-title">{{title}}</span>
         <span class="summary-light">
-            {{#if complete}}Complete!{{else}}
+            {{#if complete}}Voltooid!!{{else}}
             <span class="objectives-complete">{{objectiveProgress}}/{{arrayLength objectives}}</span>
             &middot;
             <span class="percent-complete">{{progressStr}}%</span>
