--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -24,8 +24,15 @@
     			feedback_entry_placeholder: "schrijf hier uw feedback",
     			feedback_email_placeholder: "uw email adres",
     			feedback_submit_text: "verstuur feedback"
-    		}
-  		};
+    			confirm_success_text: "Uw feedback is verstuurd.",
+    			confirm_loading_text: "Versturen van feedback...",
+    			confirm_close_text: "sluiten",
+   				confirm_error_text: "Versturen van feedback niet gelukt.",
+   				confirm_retry_text: "Probeer opnieuw",
+    			confirm_extension_text: "Wist u dat u een screenshot aan uw feedback kon toevoegen?",
+    			confirm_extension_link_text: "Meer informatie.",
+  			   }
+			  };
 
   (function (d, t) {
     var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
