--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -33,11 +33,11 @@ function submitForm(value)
         <label style="display:block;">Email</label>
         <input name="ucontact" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Email" style="width:400px"></input>
         <br />
-        <label style="display:block;">Title</label>
-        <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Title" style="width:400px"/>
+        <label style="display:block;">Titel</label>
+        <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Titel" style="width:400px"/>
         <br />
-        <label style="display:block;">Description</label>
-        <textarea name="ureport" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Description" style="width:400px;height:200px"></textarea>
+        <label style="display:block;">Beschrijving van het probleem</label>
+        <textarea name="ureport" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Beschrijving" style="width:400px;height:200px"></textarea>
         <br />
         <input type="hidden" name="page" value="reportaproblem"></input>
         <input type="hidden" name="utype" value="general"></input>
