made home page a little bit prettier, and also a little bit more broken

--- a/stylesheets/topic-package/topic-page.css
+++ b/stylesheets/topic-package/topic-page.css
@@ -2,6 +2,7 @@
     padding: 0;
 }
 
+/* TODO (Maarten:)  I think .main-video-placeholder doesn't exist anywhere*/
 .main-video-placeholder {
     position: relative;
     background: #000;
