--- a/templates/library_condensed_template.html
+++ b/templates/library_condensed_template.html
@@ -1,3 +1,5 @@
+<!-- TODO (Maarten:) It seems that this template is never used, so let's delete it -->
+
 <div id="library">
   <div id="library-content">
     <div data-role="header" class="library-content-header">
