--- a/templates/macros/library.html
+++ b/templates/macros/library.html
@@ -1,5 +1,5 @@
 {% macro column_major_order_styles(num_cols=3, column_width=300, gutter=20, font_size=12) -%}
-
+<!-- TODO (Maarten:) delete this monstrosity of a macro -->
 {%- set columns = range(0, num_cols) -%}
 {%- set link_height = font_size * 1.5 -%}
 
