--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -25,30 +25,31 @@ a.blog-title:visited {
 }
 
 a.begin-button {
-    width: 340px;
+    width: 227px;
     max-width: 80%;
-    height: 100%;
     background-image: linear-gradient(top, #1CAEEC, #1E7EC0);
     background-image: -o-linear-gradient(top, #1CAEEC, #1E7EC0);
     background-image: -moz-linear-gradient(top, #1CAEEC, #1E7EC0);
     background-image: -webkit-linear-gradient(top, #1CAEEC, #1E7EC0);
     background-image: -ms-linear-gradient(top, #1CAEEC, #1E7EC0);
     border-radius: 8px;
-    font-size: 30px;
+    font-size: 22px;
     display: block;
     text-align: center;
     vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px 5px 5px grey;
+    /*
+    TODO (Maarten:) make shadow more modest: (note: :hover has to change as well)
+*/    box-shadow: 1px 1px 3px grey;
     text-shadow: 0px 1px 1px black;
     color: white;
-    padding: 30px;
+    padding: 16px;
     margin-top: 16px;
 }
 
 a.begin-button:hover {
-    box-shadow: 3px 3px 4px grey;
+    box-shadow: 0px 0px 3px grey;
     color: white;
     text-shadow: 0px 0px 2px black;
     text-decoration: none;
@@ -83,19 +84,23 @@ a.begin-button:visited {
     margin-top: 20px;
 }
 
-#homepage-logo {
-    background: url("images/logo-horizontal-large.png") -231px 0px;
-    width: 325px;
-    height: 186px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 #homepage-text {
     margin-left: 0px;
     max-width: 100%;
+    background: #F3F3F3;;
+    -moz-box-shadow: 1px 1px 2px 0px #E2E2E2;
+    -webkit-box-shadow: 1px 1px 2px 0px #E2E2E2;
+    box-shadow: 1px 1px 2px 0px #E2E2E2;
     height: auto;
+}
+
+#homepage-text h1{
+    text-align: center;
+    margin-top: 0.8em;
+}
+
+#homepage-text p {
+    padding: 0 10%;
 }
 
 #social-actions {
@@ -121,12 +126,121 @@ td.social-action.gplus {
     width: 85px;
 }
 
+#subject-list-container {
+    margin-top: 15px;
+}
+
+#subject-list {
+    text-align: center;
+}
+
+#subject-list .video-item {
+    display: inline-block;
+}
+
+#subject-list .exercise-available {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#subject-list li, #subject-list li a, #subject-list li a:hover {
+    color: #005987;
+    text-decoration: none;
+}
+
+#subject-list>li {
+    font-size: 1.2em;
+    display: inline-block;
+    width: 220px;
+}
+
+#subject-list>li>ul>li {
+    font-size: 0.8em;
+}
+
+#subject-list ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+#subject-list p {
+    margin: 0;
+    display: block;
+}
+
+#subject-list li {
+    line-height: 140%;
+    text-indent: 0px;
+    background-position: 1px 8px;
+    padding-left: 20px;
+    background-repeat: no-repeat;
+}
+
+#subject-list>li li {
+    background-position: 1px 6px;
+}
+
+/* Collapsed state for list element */
+#subject-list .collapsed {
+    background-image: url(/images/collapsed.png);
+}
+
+/* Expanded state for list element
+/* NOTE: This class must be located UNDER the collapsed one */
+#subject-list .expanded {
+    background-image: url(/images/expanded.png);
+}
+
+#homepage-welcome-container {
+    position: relative;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 233px;
+}
+
+#homepage-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 30%;
+}
+
+#homepage-text {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 70%;
+}
+
 /* Responsive stuff */
 @media (max-width: 767px) {
     /* Kinda small margins for kinda small displays */
     #homepage-left-col {
         margin-left: 3%;
         margin-right: 3%;
+    }
+
+    #homepage-welcome-container {
+        height: auto;
+    }
+    #homepage-video {
+        position: relative;
+        height: 100px;
+        width: 100%;
+        min-height: 315px;
+    }
+
+    #homepage-text {
+        position: relative;
+        height: auto;
+        width: 100%;
     }
 }
 
