--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -12,8 +12,45 @@
 .clearfix {
     *zoom: 1;
 }
-
 /* End Clearfix */
+
+/* Borrowed from those smart guys @ Fog Creek. Props to Justin & Bobby */
+.fancy-scrollbar::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+}
+.fancy-scrollbar::-webkit-scrollbar-button:start:decrement,
+.fancy-scrollbar::-webkit-scrollbar-button:end:increment {
+    background: transparent;
+    display: none;
+}
+.fancy-scrollbar::-webkit-scrollbar-track-piece {
+    background: transparent;
+}
+.fancy-scrollbar::-webkit-scrollbar-track-piece:vertical:start {
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+}
+.fancy-scrollbar::-webkit-scrollbar-track-piece:vertical:end {
+    -webkit-border-bottom-left-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+}
+.fancy-scrollbar::-webkit-scrollbar-track-piece:horizontal:start {
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+}
+.fancy-scrollbar::-webkit-scrollbar-track-piece:horizontal:end {
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+}
+.fancy-scrollbar::-webkit-scrollbar-thumb:vertical,
+.fancy-scrollbar::-webkit-scrollbar-thumb:horizontal {
+    background: #ccc;
+    border: 1px solid #aaa;
+    -webkit-border-radius: 4px;
+    display: block;
+    height: 50px;
+}
 
 html, body {
     height: 100%;
@@ -2656,6 +2693,7 @@ background: #fafafa;
 }
 
 /* Homepage styles */
+/* TODO (Maarten:) homepage styles should be in homepage.css... Or else why would it exist? */
 #homepage {
     background: #FFFFFF;
 }
@@ -2998,6 +3036,7 @@ ul.topic-browser-menu > li > ul > li > a {
     display: none;
 }
 
+/* TODO (Maarten:) This selector matches 0 elements */
 #homepage #main-video {
     position: absolute;
     margin-top: 18px;
