--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -23,7 +23,7 @@
     			option_site_text: "Ik heb feedback over deze pagina in z'n geheel.",
     			feedback_entry_placeholder: "schrijf hier uw feedback",
     			feedback_email_placeholder: "uw email adres",
-    			feedback_submit_text: "verstuur feedback"
+    			feedback_submit_text: "verstuur feedback",
     			confirm_success_text: "Uw feedback is verstuurd.",
     			confirm_loading_text: "Versturen van feedback...",
     			confirm_close_text: "sluiten",
