--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -50,44 +50,46 @@
             <iframe id="homepage-video" src="http://www.youtube.com/embed/tC80BNOKJtk"
                     frameborder="0"
                     allowfullscreen></iframe>
-            <div id="homepage-text" class="visited-no-recolor">
-                <div id="main-video">
+            <div id="homepage-text-container" class="visited-no-recolor">
+                <div id="homepage-text">
+                    <div id="main-video">
 
+                    </div>
+                    <h1>
+                        Welkom bij Khan Academie
+                    </h1>
+
+                    <p>
+                        Wij zijn op een missie om jou
+                        te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in
+                        je
+                        eigen tempo.
+                    </p>
+
+                    <!-- TODO delete non-relevant text
+                    <p>
+                        Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel
+                        gesteld
+                        alle oefeningen die op dit moment op de website staan rond nieuwjaar vertaald te hebben naar het
+                        Nederlands en bij elke video een oefening te plaatsen.
+                        Vanaf 2013 gaan er nieuwe oefeningen toegevoegd worden en worden de oefeningen ingedeeld volgens
+                        de
+                        referentieniveaus van Meijerink. Ook komt er een mogelijkheid om de bestaande video's te
+                        vervangen
+                        door
+                        eigen gemaakte video's. Wij geloven namelijk in de kracht van onderwijzers en willen samen een
+                        krachtig
+                        platform maken.
+                    </p>
+                    -->
+                    <!--
+                <div>
+                    <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
+                    <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
                 </div>
-                <h1>
-                    Welkom bij Khan Academie
-                </h1>
-
-                <p>
-                    Wij zijn op een missie om jou
-                    te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in
-                    je
-                    eigen tempo.
-                </p>
-
-                <!-- TODO delete non-relevant text
-                <p>
-                    Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel
-                    gesteld
-                    alle oefeningen die op dit moment op de website staan rond nieuwjaar vertaald te hebben naar het
-                    Nederlands en bij elke video een oefening te plaatsen.
-                    Vanaf 2013 gaan er nieuwe oefeningen toegevoegd worden en worden de oefeningen ingedeeld volgens
-                    de
-                    referentieniveaus van Meijerink. Ook komt er een mogelijkheid om de bestaande video's te
-                    vervangen
-                    door
-                    eigen gemaakte video's. Wij geloven namelijk in de kracht van onderwijzers en willen samen een
-                    krachtig
-                    platform maken.
-                </p>
                 -->
-                <!--
-            <div>
-                <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
-                <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
-            </div>
-            -->
-                <a class="begin-button" href="/exercisedashboard">Begin met oefenen!</a>
+                    <a class="begin-button" href="/exercisedashboard">Begin met oefenen!</a>
+                </div>
             </div>
         </div>
 
