Edit Topic icon

--- a/javascript/topicsadmin-package/edit-topic.handlebars
+++ b/javascript/topicsadmin-package/edit-topic.handlebars
@@ -80,6 +80,13 @@
           <a href="javascript:" data-id="add-tag" class="item-action simple-button">Add</a>
         </td>
       </tr>
+      <tr>
+        <td style="font-weight:bold;">Icon name</td>
+        <td style="padding-bottom:9px;">
+          <input type="text" name="icon_name" value="{{ model.icon_name }}" class="short" maxlength="32"/><br/>
+          <em>[Name] of icon image as follows: [Name]-40x40.png</em>
+        </td>
+      </tr>
 
       <tr>
         <td style="font-weight:bold;">Icon name</td>
