--- a/javascript/profile-package/exercise_progress.handlebars
+++ b/javascript/profile-package/exercise_progress.handlebars
@@ -6,8 +6,8 @@
     <div class="hover-data" style="display: none;">
       <div class="exercise-display-name ellipsis">{{displayName}}</div>
       <div class="exercise-status">Status: {{status}}</div>
-      <div class="exercise-progress">Progress: {{progress}}</div>
-      <div class="exercise-done">Problems attempted: {{totalDone}}</div>
+      <div class="exercise-progress">Voortgang: {{progress}}</div>
+      <div class="exercise-done">Oefeningen geprobeerd: {{totalDone}}</div>
     </div>
 		<div style="clear:both"></div>
   </div>
