--- a/javascript/profile-package/coach.handlebars
+++ b/javascript/profile-package/coach.handlebars
@@ -2,10 +2,10 @@
 {{#if isMutable}}
     <span class="controls">
     {{#if isCoachingLoggedInUser}}
-        <span class="remove simple-button">Remove</span>
+        <span class="remove simple-button">Verwijder</span>
     {{else}}
-        <span class="accept simple-button green">Accept</span>
-        <span class="deny simple-button">Ignore</span>
+        <span class="accept simple-button green">Accepteer</span>
+        <span class="deny simple-button">Negeer</span>
     {{/if}}
     </span>
 {{/if}}
